@@ -1,5 +1,6 @@
 package homeWork7;
 
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -17,9 +18,10 @@ public class PluginManager {
 
     public Plugin load(String pluginName, String pluginClassName)
             throws MalformedURLException, ClassNotFoundException, IllegalAccessException, InstantiationException {
-        String path = pluginRootDirectory + "/" + pluginName + "/" + pluginClassName;
+        String path = pluginRootDirectory + "/" + pluginName + "/";
+        File file = new File(path);
 
-        URLClassLoader urlClassLoader = new URLClassLoader(new URL[] {new URL(path)});
+        URLClassLoader urlClassLoader = new URLClassLoader(new URL[] {file.toURL()}, null);
         Class cl = urlClassLoader.loadClass(pluginClassName);
         if (!Arrays.asList(cl.getInterfaces()).contains(Plugin.class)) {
             throw new ClassNotFoundException("The class doesn't implements Plugin interface!");
